--- a/Inventory/WebContent/css/thumbnail-gallery.css
+++ b/Inventory/WebContent/css/thumbnail-gallery.css
@@ -3,15 +3,15 @@
  * Copyright 2013-2016 Start Bootstrap
  * Licensed under MIT (https://github.com/BlackrockDigital/startbootstrap/blob/gh-pages/LICENSE)
  */
-
 body {
-    padding-top: 70px; /* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
+	padding-top: 70px;
+	/* Required padding for .navbar-fixed-top. Change if height of navigation changes. */
 }
 
 .thumb {
-    margin-bottom: 30px;
+	margin-bottom: 30px;
 }
 
 footer {
-    margin: 50px 0;
+	margin: 50px 0;
 }
